--- a/BuberDinner.Infrastructure/BuberDinner.Infrastructure.csproj
+++ b/BuberDinner.Infrastructure/BuberDinner.Infrastructure.csproj
@@ -1,7 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
- 
-
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -11,5 +9,9 @@
    <ItemGroup>
     <ProjectReference Include="..\BuberDinner.Application\BuberDinner.Application.csproj" />
   </ItemGroup>
+
+   <ItemGroup>
+     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+   </ItemGroup>
 
 </Project>
